phone css changed for blurred daata issue

--- a/Ganpati_site/css/styles.css
+++ b/Ganpati_site/css/styles.css
@@ -48,7 +48,7 @@ html {
 }
 
 body, p {
-	color: #f1f1f8;
+	/* color: #f1f1f8; */
 	font: 400 0.875rem/1.375rem "Open Sans", sans-serif;
 }
 
@@ -91,7 +91,7 @@ h3 {
 }
 
 h4 {
-	color: #f1f1f8;
+	/* color: #f1f1f8; */
 	font: 700 1.375rem/1.75rem "Montserrat", sans-serif;
 }
 
@@ -1499,7 +1499,23 @@ input[type='checkbox'] {
    padding-bottom: 30px;
 }
 
+.text-container h4{
+	font-size: 45px;
+	font-family: 'Abril Fatface';
+	text-transform: uppercase;
+	color:#e56c34;
+	/* padding-left:43px; */
+	font-weight:500;
+	padding-bottom: 30px;
+}
 
+.text-container p{
+	color: #e56c34;
+	padding-right:40px;
+	font-size:18px;
+	line-height: 1.9rem;
+	text-align: justify;
+}
 /**********************************/
 /*     16. Back To Top Button     */
 /**********************************/
